# lnprototest-v2

./: .gitignore  Cargo.toml  Makefile  flake.nix  go.mod  go.sum  rpc.go  server.go
.github/workflows/: build.yml  release.yml
cmd/: main.go
lnprototest/: server.go  utils.go
lnprototest-cli/: Cargo.toml
lnprototest-cli/src/: args.rs  logger.rs  main.rs
lnprototest-socket/: Cargo.toml
lnprototest-socket/src/: lib.rs
server/: rpc.go  server.go
