[package]
name = "lnprototest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lexopt = { version = "0.3" }
radicle-term = { git = "https://github.com/radicle-dev/heartwood.git" }
serde_json = "1"
colored = "1.9"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
